--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: '18.x'
 
       - name: Installing my packages
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Build my App
         run: npm run build && npm run export && touch ./out/.nojekyll
